--- a/assets/css/sass/woocommerce/product-columns.scss
+++ b/assets/css/sass/woocommerce/product-columns.scss
@@ -12,7 +12,7 @@
         position: relative;
         text-align: center;
 
-        @media ( min-width: #{ $screen-md } ) {
+        @media ( min-width: $screen-md ) {
             width: calc( ( 100% - 90px ) / 4 );
             &.last {
                 margin-right: 0;
@@ -21,13 +21,16 @@
 
         @media ( min-width: #{ $screen-ios } ) and ( max-width: #{ $screen-md - 1 } ) {
             width: calc( ( 100% - 30px ) / 2 );
+
             &:nth-of-type( 2n ) {
                 margin-right: 0;
             }
+
             &:nth-of-type( 2n + 3 ) {
                 clear: both;
             }
         }
+
         /*ios*/
         @media ( max-width: #{ $screen-ios - 1 } ) {
             width: 100%;
@@ -42,11 +45,12 @@
         }
     }
 
-    @media ( min-width: #{ $screen-md } ) {
+    @media ( min-width: $screen-md ) {
         @for $i from 2 through 6 {
             &.columns-#{ $i } {
                 .product{
                     width: calc( ( 100% - #{ 30px * ( $i - 1 ) } ) / #{ $i } );
+                    
                     &:nth-of-type( #{ $i }n + #{ $i + 1 } ) {
                         clear: both;
                     }
