--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -9,6 +9,9 @@
     }
 
     /* logo */
+    .logo{
+    	margin: 0;
+    }
     .site-branding{
         .beta.site-title{
             margin: 0;
@@ -91,7 +94,7 @@
 	            .sub-menu{
 	                pointer-events: none;
 
-	                @media ( min-width: #{ $screen-md } ){
+	                @media ( min-width: $screen-md ) {
 	                    @include shadow( 0 2px 8px 0 rgba(125, 122, 122, 0.2) );
 	                    border-radius: 4px;
 	                }
@@ -221,7 +224,7 @@
 }
 
 /* mobile menu toggle button */
-.menu-toggle{
+.menu-toggle-btn{
 	font-size: 24px;
 	cursor: pointer;
 	position: absolute;
@@ -230,11 +233,11 @@
 
 /* responsive */
 @media ( min-width: $screen-md ) {
-	.menu-toggle{
+	.menu-toggle-btn{
 		display: none;
 	}
 
-	#site-navigation{
+	.site-navigation{
 		.site-search,
 		.mobile-my-account{
 			display: none;
@@ -251,54 +254,17 @@
 	    	justify-content: center;
 	    }
 
+	    .site-navigation,
 	    .site-search{
 	    	display: none;
 	    }
-	}
 
-	#site-navigation{
-		position: fixed;
-		left: 0;
-		top: 0;
-		bottom: 0;
-		background-color: #fff;
-		z-index: 10;
-		padding: 15px;
-		width: 300px;
-		max-width: 80%;
-		
-		.logged-in.admin-bar & {
-	        top: 46px;
-	        @media ( min-width: 783px ) {
-	            top: 32px;
-	        }
-	    }
-
-		.site-search{
-	    	display: block;
+	    .logo{
+	    	max-width: 70%;
+	    	margin: 0 auto;
 	    }
 	}
-
-	.main-navigation{
-		.sub-menu{
-			display: none;
-		}
-
-		.primary-navigation{
-			list-style: none;
-			padding-left: 0;
-			margin: 0;
-
-			li{
-				list-style: none;
-			}
-
-			a{
-				display: block;
-			}
-		}
-	}
-
+	
 	.site-tools{
 		position: absolute;
 		right: 27px;
