--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -1,4 +1,13 @@
 .woocommerce-account{
+	h2{
+		font-size: 20px;
+		font-weight: normal;
+	}
+
+	.entry-title{
+		margin-bottom: 50px;
+	}
+
 	.woocommerce-form.woocommerce-form-login{
 		border-top: 2px dashed #e8e8e8;
 		width: 100%;
@@ -26,4 +35,196 @@
 			height: 40px;
 		}
 	}
+}
+
+/* when login */
+.woocommerce-form-login,
+.woocommerce-form-register,
+.woocommerce-form-coupon{
+
+    button[type="submit"]{
+        color: #fff;
+        border: 0;
+        height: 40px;
+        padding: 0 20px;
+        margin-right: 10px;
+    }
+}
+
+.woocommerce-account{
+    .u-column1{
+        margin-bottom: 30px;
+
+        @media ( min-width: $screen-sm ) {
+            @include calc( max-width, '( 100% - 30px ) / 2' );
+            margin-right: 30px;
+            margin-bottom: 0;
+        }
+
+        .woocommerce-form-login{
+            width: 100%;
+            max-width: 100%;
+        }
+    }
+    .u-column2{
+        @media ( min-width: $screen-sm ) {
+            @include calc( max-width, '( 100% - 30px ) / 2' );
+        }
+    }
+}
+
+.woocommerce-MyAccount-navigation{
+    margin-bottom: 30px;
+    float: left;
+
+    @media ( min-width: $screen-md ) {
+        margin-bottom: 0;
+        max-width: 270px;
+        margin-right: 30px;
+        padding-right: 100px;
+        border-right: 1px solid #eee;
+    }
+
+    ul{
+        list-style: none;
+        margin: 0;
+        padding-left: 0;
+    }
+
+    .woocommerce-MyAccount-navigation-link{
+        margin-bottom: 20px;
+
+        &.is-active{
+            a{
+                font-weight: 700;
+            }
+        }
+
+        a{
+            font-size: 15px;
+            @include flex( flex, flex-start, center );
+
+            &:before{
+                font-size: 20px;
+                font-family: $icon;
+                margin-right: 15px;
+                line-height: 0;
+            }
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--dashboard{
+        a:before{
+            content: "\e6aa";
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--orders{
+        a:before{
+            content: "\e694";
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--downloads{
+        a:before{
+            content: "\e6a7";
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--edit-address{
+        a:before{
+            content: "\e6a8";
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--edit-account{
+        a:before{
+            content: "\e721";
+        }
+    }
+
+    .woocommerce-MyAccount-navigation-link--customer-logout{
+        a:before{
+            content: "\e61d";
+        }
+    }
+}
+.woocommerce-MyAccount-content{
+	float: left;
+
+	table{
+		&:first-child{
+			margin: 0;
+		}
+	}
+
+    @media ( min-width: $screen-md ) {
+        @include calc( width, '100% - 400px' );
+    }
+
+    .woocommerce-EditAccountForm{
+        button[type="submit"]{
+            height: 55px;
+            color: #fff;
+            border: 0;
+            margin-top: 40px;
+            @extend .duration;
+
+            &:hover{
+                opacity: 0.8;
+            }
+        }
+    }
+
+    fieldset{
+        border: 1px solid #ddd;
+        margin: 0;
+        padding: 5px 15px;
+    }
+}
+
+.woocommerce-Address{
+	border: 1px solid #eee;
+
+	.woocommerce-Address-title{
+		@include flex( flex, space-between, center );
+		h3{
+			font-size: 18px;
+			font-weight: normal;
+			display: inline-block;
+			margin: 0;
+			padding: 15px;
+		}
+
+		.edit{
+			margin-right: 15px;
+
+			&:before{
+				content: "\e61c";
+				font-family: $icon;
+				margin-right: 5px;
+				font-weight: 700;
+			}
+		}
+	}
+
+	address{
+		border-top: 1px solid #eee;
+		margin-bottom: 0;
+		padding: 15px;
+	}
+}
+
+.woocommerce-address-fields{
+    .button{
+        height: 50px;
+        color: #fff;
+        padding: 0 25px;
+        border: 0;
+
+        &:hover{
+            @extend .duration;
+            opacity: 0.7;
+        }
+    }
 }
