--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -18,13 +18,16 @@
 	display: flex;
 	float: left;
 	max-width: 100%;
-	@media ( min-width: #{ $screen-md } ) {
+
+	@media ( min-width: $screen-md ) {
 		width: calc( ( 100% - 30px ) / 2 );
 	}
 }
+
 /* product images */
 .product-images{
 	order: 2;
+
 	.image-item{
 		margin: 0;
 		cursor: pointer;
@@ -33,14 +36,18 @@
 
 /* product thumbnail images */
 .product-thumbnail-images{
-	width: 50px;
-	min-width: 50px;
-	margin-right: 20px;
+	@media ( min-width: $screen-sm ) {
+		width: 50px;
+		min-width: 50px;
+		margin-right: 20px;
+	}
+
 	.thumbnail-item{
 		cursor: pointer;
 		border: 1px solid $tr;
 		position: relative;
 	}
+
 	.tns-nav-active{
 		border-color: #555555;
 	}
@@ -67,9 +74,11 @@
 			.thumbnail-item{
 				&:first-of-type{
 					@extend .circle-loading;
+
 					img{
 						opacity: 0;
 					}
+
 					~.thumbnail-item{
 						display: none;
 					}
@@ -83,28 +92,34 @@
 .summary.entry-summary{
 	float: left;
 	max-width: 100%;
-	@media ( min-width: #{ $screen-md } ) {
+
+	@media ( min-width: $screen-md ) {
 		width: calc( ( 100% - 30px ) / 2 );
 		margin-left: 30px;
 	}
+
 	.price{
 		font-size: 24px;
 		margin-bottom: 18px;
 	}
 }
+
 .woocommerce-product-rating{
 	margin-bottom: 15px;
 }
+
 .woocommerce-product-details__short-description{
 	border: 1px solid #e8e8e8;
 	border-left: 0;
 	border-right: 0;
 	padding: 35px 0;
+
 	p{
 		&:last-child{
 			margin-bottom: 0;
 		}
 	}
+
 	+.cart{
 		margin-top: 20px;
 	}
@@ -113,12 +128,14 @@
 .woocommerce-grouped-product-list{
 	border: 0;
 	margin-top: 0;
+
 	td{
 		border-left: 0;
 		border-right: 0;
 		padding-left: 0;
 		padding-right: 0;
 	}
+
 	ins{
 		background-color: $tr;
 	}
@@ -127,31 +144,37 @@
 // table variations.
 .variations{
 	border: 0;
+
 	td{
 		display: block;
 		border: 0;
 		padding: 2px 0;
 	}
+
 	tr{
 		display: block;
 		+tr{
 			margin-top: 10px;
 		}
 	}
+
 	select{
 		clear: both;
 		display: block;
 		height: 40px;
 		background-color: $tr;
 	}
+
 	label{
 		text-transform: uppercase;
 	}
 }
+
 .reset_variations{
 	float: left;
 	margin-top: 5px;
 	@include duration(0s);
+
 	&[style*="visibility: hidden"]{
 		height: 0;
 		margin-top: 0;
@@ -161,13 +184,16 @@
 .shop_table{
 	.variation{
 		margin: 0;
+
 		dt, dd{
 			display: inline-block;
 			font-weight: normal;
 		}
+
 		dd{
 			margin-bottom: 0;
 		}
+
 		p{
 			&:last-child{
 				margin-bottom: 0;
@@ -186,14 +212,17 @@
 	font-weight: normal;
 	margin-bottom: 10px;
 }
+
 .cart{
 	.quantity{
 		margin-right: 8px;
 	}
 }
+
 .woocommerce-variation-price{
 	margin-bottom: 10px;
 }
+
 .quantity{
 	width: 170px;
 	height: 50px;
@@ -202,6 +231,7 @@
 	overflow: hidden;
 	background: #fff;
 	@extend .inline-flex;
+
 	.qty{
 		text-align: center;
 		border: 0;
@@ -210,11 +240,13 @@
 		flex-grow: 1;
 		padding: 0 40px;
 		-moz-appearance:textfield;
+
 		&::-webkit-inner-spin-button,
 		&::-webkit-outer-spin-button{
 			-webkit-appearance: none;
 		}
 	}
+
 	.product-qty{
 		position: absolute;
 		font-family: $icon;
@@ -223,21 +255,27 @@
 		height: 100%;
 		@extend .flex;
 	}
+
 	[data-qty="minus"]{
 		left: 0;
+
 		&:before{
 			content: "\e622"
 		}
 	}
+
 	[data-qty="plus"]{
 		right: 0;
+
 		&:before{
 			content: "\e61a"
 		}
 	}
 }
+
 .single_add_to_cart_button{
 	position: relative;
+
 	&.button{
 		min-width: 200px;
 		height: 50px;
@@ -247,8 +285,10 @@
 		vertical-align: top
 	}
 }
+
 .product_meta{
 	margin-top: 20px;
+
 	>span{
 		display: block;
 	}
@@ -261,55 +301,68 @@
 	padding-top: 54px;
 	border-bottom: 1px solid #efefef;
 	padding-bottom: 50px;
+
 	.tabs{
 		margin: 0;
 		padding-left: 0;
 		text-align: center;
+
 		li{
 			list-style: none;
 			display: inline-block;
 			margin: 0 30px;
 		}
+
 		a{
 			font-size: 18px;
 		}
 	}
+
 	.woocommerce-Tabs-panel{
 		padding: 23px 0;
 		max-width: 770px;
 		margin: 0 auto;
 		display: none;
+
 		>h2{
 			display: none;
 		}
+
 		table{
 			margin: 0;
 		}
+
 		p{
 			&:last-child{
 				margin-bottom: 0;
 			}
 		}
 	}
+
 	// comment reviews.
 	#reply-title{
 		display: none;
 	}
+
 	#comments{
 		border-top: 0;
 		padding-top: 0;
 		margin-top: 0;
 	}
+
 	.woocommerce-Reviews-title{
 		display: none;
 	}
+
 	.commentlist{
 		padding-left: 0;
 		margin: 0;
 	}
+
 	.comment{
 		margin-bottom: 40px;
 	}
+
 	.comment_container{
 		display: flex;
 		justify-content: flex-start;
@@ -332,9 +385,11 @@
 			vertical-align: text-top;
 		}
 	}
+
 	.comment-notes{
 		width: 100%;
 	}
+
 	.comment-form{
 		>p{
 			width: 100%;
@@ -367,5 +422,24 @@
 	.summary.entry-summary{
 		margin-top: 50px;
 		width: 100%;
+	}
+
+	.single_add_to_cart_button{
+		display: block;
+		margin-top: 10px;
+	}
+}
+
+@media ( max-width: $screen-sm - 1 ) {
+	.product-gallery{
+		display: block;
+	}
+
+	.product-thumbnail-images{
+		margin-top: 20px;
+
+		.thumbnail-item{
+			margin-right: 10px;
+		}
 	}
 }
