--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -1,5 +1,6 @@
 .site-footer{
     margin-top: 100px;
+    clear: both;
 }
 
 /* FOOTER WIDGET COLUMNS */
@@ -79,11 +80,15 @@
 /* SITE INFOR */
 .site-info{
     clear: both;
-    border-top: 1px solid #e3e3e3;
     padding: 11px 0;
     font-size: 10px;
     text-transform: uppercase;
     @include flex( flex, space-between, center );
+
+	&:not(:first-child){
+		border-top: 1px solid #e3e3e3;
+	}
+
     ul{
         padding-left: 0;
         margin: 0;
