WOOSTIFY-20 #comment update header option

--- a/assets/css/sass/base/layout/blog/blog-list.scss
+++ b/assets/css/sass/base/layout/blog/blog-list.scss
@@ -1,8 +1,19 @@
-.alpha.entry-title{
-    font-size: 24px;
-    font-weight: normal;
+.home{
+	&.blog{
+		.site-main{
+			.post{
+				&:first-child:last-child{
+					border-bottom: 0;
+				}
+			}
+		}
+	}
 }
 
+.alpha.entry-title{
+    font-size: 30px;
+    font-weight: normal;
+}
 
 .site-main{
     .post{
