--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -81,12 +81,19 @@
 .site-info{
     clear: both;
     padding: 11px 0;
-    font-size: 10px;
+    font-size: 11px;
     text-transform: uppercase;
     @include flex( flex, space-between, center );
 
 	&:not(:first-child){
 		border-top: 1px solid #e3e3e3;
+	}
+
+	.site-infor-col{
+		&:first-child:last-child{
+			text-align: center;
+			width: 100%;
+		}
 	}
 
     ul{
