WOOSTIFY-20 #comment update customizer option

--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -42,3 +42,15 @@
 		font-weight: normal;
 	}
 }
+
+.site-main{
+	.page-header{
+		margin-bottom: 50px;
+		background-color: #eeeeec;
+		padding: 30px;
+
+		.entry-title{
+			margin: 0;
+		}
+	}
+}
