--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -38,11 +38,16 @@
 	}
 }
 
+/* product loop category */
+.woocommerce-loop-product__category{
+	line-height: 1.5em;
+	font-size: 12px;
+}
+
 /* product loop title */
 .woocommerce-loop-product__title{
 	font-size: 12px;
 	font-weight: normal;
-	margin-top: 26px;
 	margin-bottom: 5px;
 }
 
@@ -124,6 +129,7 @@
 	ul{
 		padding-left: 0;
 	}
+	
 	li{
 		list-style: none;
 	}
