--- a/assets/css/sass/base/layout/blog/layout.scss
+++ b/assets/css/sass/base/layout/blog/layout.scss
@@ -1,7 +1,7 @@
 $sidebar_width: percentage( 270 / 1170 );
 
 @media ( min-width: $screen-md ){
-	.is-active-sidebar{
+	.has-sidebar{
         &.left-sidebar{
 	        .content-area{
 	            float: right;
