--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -7,6 +7,10 @@
         align-items: center;
         position: relative;
         min-height: 70px;
+
+        &:after{
+        	content: none;
+        }
     }
 
     /* logo */
